# filesend

./: Cargo.toml  LICENSE  README.md  build.rs  tray.rc
src/: autodiscovery.rs  main.rs  networking.rs
