[package]
name = "filesend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
druid = { version = "0.8.3", features=["im"] }
# druid-derive = "0.5.1"
walkdir = "2"
msgpacker = "0.4.3"
searchlight = "0.3.1"
hostname = "0.3.1"
local-ip-address = "0.5.2"
human_bytes = "0.4.2"
clipboard = "0.5.0"
