[package]
name = "filesend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
# strip = true
# lto = true
# codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
druid = { version = "0.8.3", features=["im"] }
tray-item = "0.8.0"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
rmp = "0.8.12"
rmp-serde = "1.1.2"
searchlight = "0.3.1"
hostname = "0.3.1"
local-ip-address = "0.5.2"
human_bytes = "0.4.2"
clipboard = "0.5.0"
home = "0.5.5"

[build-dependencies]
windres = "*"
