[package]
name = "filesend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
# strip = true
# lto = true
# codegen-units = 1

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
druid = { version = "0.8.3", features=["im"] }
tray-item = "0.10.0"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
searchlight = "0.3.2"
hostname = "0.4.0"
local-ip-address = "0.6.3"
human_bytes = "0.4.3"
clipboard = "0.5.0"
home = "0.5.9"
log = "0.4.22"
simple-logging = "2.0.2"

[build-dependencies]
windres = "*"
